added drag and drop functionality for the spots (closes #24), improved and simplified build script and docs