@@ -4,24 +4,10 @@ weather forecast and real-time wind conditions dashboard for kitesurfers
 
 see it online at: https://varun.surf
 
-## building
-
-backend:
+## building & running
 
 ```
-./gradlew clean bootJar
-```
-
-frontend:
-
-```
-./build_frontend.sh
-```
-
-## running
-
-```
-java --enable-preview -jar build/libs/*.jar
+./run.sh
 ```
 
 ## testing
